[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multilogin-x-sdk"
version = "1.9.0"
description = "Multilogin X Python SDK — 120 antidetect automation tools. Playwright CDP. @Multilogin_Scripts_Bot · SAAS50"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31.0",
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4.0", "pytest>=8.0.0"]

[project.scripts]
mlx = "mlx.cli:main"
stealthbrowser = "stealthbrowser.cli:main"

[tool.setuptools.packages.find]
include = ["mlx*", "stealthbrowser*"]

[tool.pytest.ini_options]
testpaths = ["tests", "stealthbrowser/tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"demos/*" = ["E501", "I001", "E741"]
"examples/*" = ["E501", "I001"]
